# ChangeLog for dev-java/jzlib
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jzlib/ChangeLog,v 1.34 2011/05/03 18:42:24 grobian Exp $

  03 May 2011; Fabian Groffen <grobian@gentoo.org> jzlib-1.0.7-r1.ebuild:
  Marked ~x64-freebsd

  16 Jul 2010; Fabian Groffen <grobian@gentoo.org> jzlib-1.0.7-r1.ebuild:
  Marked ~x64-macos

  15 Jan 2010; Ulrich Mueller <ulm@gentoo.org> jzlib-1.0.7-r1.ebuild:
  LICENSE is identical with BSD, bug 301123.

  03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  jzlib-1.0.7-r1.ebuild:
  Transfer Prefix keywords

  30 May 2007; Petteri Räty <betelgeuse@gentoo.org> -jzlib-1.0.5.ebuild:
  Remove generation 1 ebuild.

  12 Apr 2007; <welp@gentoo.org> jzlib-1.0.7-r1.ebuild:
  Stable on amd64 wrt bug 170959

  17 Mar 2007; nixnut <nixnut@gentoo.org> jzlib-1.0.7-r1.ebuild:
  Stable on ppc wrt bug 170959

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> jzlib-1.0.7-r1.ebuild:
  Stable on ppc64; bug #170959

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  jzlib-1.0.7-r1.ebuild:
  stable x86, bug 170959

  18 Feb 2007; Petteri Räty <betelgeuse@gentoo.org> jzlib-1.0.7-r1.ebuild:
  Ebuild cleanup.

  18 Feb 2007; Petteri Räty <betelgeuse@gentoo.org> -jzlib-1.0.7.ebuild:
  Removed old version.

  17 Oct 2006; Joshua Nichols <nichoj@gentoo.org> jzlib-1.0.7-r1.ebuild:
  Keyworded ~ia64.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> jzlib-1.0.5.ebuild,
  jzlib-1.0.7.ebuild, jzlib-1.0.7-r1.ebuild:
  Dropping sparc keywords, see #96229

  27 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> jzlib-1.0.7-r1.ebuild:
  Added java-ant-2.

  23 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> jzlib-1.0.7-r1.ebuild:
  Add ~x86-fbsd keyword.

*jzlib-1.0.7-r1 (21 Jul 2006)

  21 Jul 2006; Joshua Nichols <jnichols@gentoo.org> +jzlib-1.0.7-r1.ebuild:
  Revision bump to use new Java system.

*jzlib-1.0.7 (12 Dec 2005)
