@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene-analyzers/lucene-analyzers-1.9.1-r1.ebuild,v 1.5 2008/09/11 19:09:29 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene-analyzers/lucene-analyzers-1.9.1-r1.ebuild,v 1.6 2011/12/31 13:59:31 sera Exp $
 
 JAVA_PKG_IUSE="source"
 inherit java-pkg-2 java-ant-2 java-osgi
@@ -14,7 +14,7 @@ HOMEPAGE="http://lucene.apache.org/java"
 SRC_URI="mirror://apache/lucene/java/${MY_P}-src.tar.gz"
 LICENSE="Apache-2.0"
 SLOT="1.9"
-KEYWORDS="amd64 ~ia64 ppc x86 ~x86-fbsd"
+KEYWORDS="amd64 ppc x86 ~x86-fbsd"
 IUSE=""
 DEPEND=">=virtual/jdk-1.4
 	>=dev-java/ant-core-1.6"
