@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/lucene-analyzers
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene-analyzers/ChangeLog,v 1.9 2010/02/13 16:41:40 grobian Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene-analyzers/ChangeLog,v 1.10 2011/12/31 13:59:31 sera Exp $
+
+  31 Dec 2011; Ralph Sennhauser <sera@gentoo.org>
+  lucene-analyzers-1.9.1-r1.ebuild, lucene-analyzers-2.3.2.ebuild:
+  Drop ia64 support #345433
 
   13 Feb 2010; Fabian Groffen <grobian@gentoo.org>
   lucene-analyzers-2.3.2.ebuild:
