@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/lucene
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene/ChangeLog,v 1.83 2011/12/19 11:35:15 sera Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene/ChangeLog,v 1.84 2011/12/31 13:57:16 sera Exp $
+
+  31 Dec 2011; Ralph Sennhauser <sera@gentoo.org> lucene-1.4.3-r3.ebuild,
+  lucene-1.9.1.ebuild:
+  Drop ia64 support #345433
 
   19 Dec 2011; Ralph Sennhauser <sera@gentoo.org> lucene-1.4.3-r3.ebuild,
   lucene-1.9.1.ebuild, lucene-2.1.0.ebuild, lucene-2.1.0-r1.ebuild,
