@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jzlib
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jzlib/ChangeLog,v 1.34 2011/05/03 18:42:24 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jzlib/ChangeLog,v 1.35 2011/12/31 13:54:24 sera Exp $
+
+  31 Dec 2011; Ralph Sennhauser <sera@gentoo.org> jzlib-1.0.7-r1.ebuild:
+  Drop ia64 support #345433
 
   03 May 2011; Fabian Groffen <grobian@gentoo.org> jzlib-1.0.7-r1.ebuild:
   Marked ~x64-freebsd
